Make Command abstract